; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_gem.c_virtio_gpu_gem_object_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_gem.c_virtio_gpu_gem_object_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_gem_object = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.virtio_gpu_device* }
%struct.virtio_gpu_device = type { i32 }
%struct.drm_file = type { %struct.virtio_gpu_fpriv* }
%struct.virtio_gpu_fpriv = type { i32 }
%struct.virtio_gpu_object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @virtio_gpu_gem_object_close(%struct.drm_gem_object* %0, %struct.drm_file* %1) #0 {
  %3 = alloca %struct.drm_gem_object*, align 8
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca %struct.virtio_gpu_device*, align 8
  %6 = alloca %struct.virtio_gpu_fpriv*, align 8
  %7 = alloca %struct.virtio_gpu_object*, align 8
  %8 = alloca i32, align 4
  store %struct.drm_gem_object* %0, %struct.drm_gem_object** %3, align 8
  store %struct.drm_file* %1, %struct.drm_file** %4, align 8
  %9 = load %struct.drm_gem_object*, %struct.drm_gem_object** %3, align 8
  %10 = getelementptr inbounds %struct.drm_gem_object, %struct.drm_gem_object* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.virtio_gpu_device*, %struct.virtio_gpu_device** %12, align 8
  store %struct.virtio_gpu_device* %13, %struct.virtio_gpu_device** %5, align 8
  %14 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %15 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %14, i32 0, i32 0
  %16 = load %struct.virtio_gpu_fpriv*, %struct.virtio_gpu_fpriv** %15, align 8
  store %struct.virtio_gpu_fpriv* %16, %struct.virtio_gpu_fpriv** %6, align 8
  %17 = load %struct.drm_gem_object*, %struct.drm_gem_object** %3, align 8
  %18 = call %struct.virtio_gpu_object* @gem_to_virtio_gpu_obj(%struct.drm_gem_object* %17)
  store %struct.virtio_gpu_object* %18, %struct.virtio_gpu_object** %7, align 8
  %19 = load %struct.virtio_gpu_device*, %struct.virtio_gpu_device** %5, align 8
  %20 = getelementptr inbounds %struct.virtio_gpu_device, %struct.virtio_gpu_device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %2
  br label %41

24:                                               ; preds = %2
  %25 = load %struct.virtio_gpu_object*, %struct.virtio_gpu_object** %7, align 8
  %26 = call i32 @virtio_gpu_object_reserve(%struct.virtio_gpu_object* %25, i32 0)
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %8, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %24
  br label %41

30:                                               ; preds = %24
  %31 = load %struct.virtio_gpu_device*, %struct.virtio_gpu_device** %5, align 8
  %32 = load %struct.virtio_gpu_fpriv*, %struct.virtio_gpu_fpriv** %6, align 8
  %33 = getelementptr inbounds %struct.virtio_gpu_fpriv, %struct.virtio_gpu_fpriv* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.virtio_gpu_object*, %struct.virtio_gpu_object** %7, align 8
  %36 = getelementptr inbounds %struct.virtio_gpu_object, %struct.virtio_gpu_object* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @virtio_gpu_cmd_context_detach_resource(%struct.virtio_gpu_device* %31, i32 %34, i32 %37)
  %39 = load %struct.virtio_gpu_object*, %struct.virtio_gpu_object** %7, align 8
  %40 = call i32 @virtio_gpu_object_unreserve(%struct.virtio_gpu_object* %39)
  br label %41

41:                                               ; preds = %30, %29, %23
  ret void
}

declare dso_local %struct.virtio_gpu_object* @gem_to_virtio_gpu_obj(%struct.drm_gem_object*) #1

declare dso_local i32 @virtio_gpu_object_reserve(%struct.virtio_gpu_object*, i32) #1

declare dso_local i32 @virtio_gpu_cmd_context_detach_resource(%struct.virtio_gpu_device*, i32, i32) #1

declare dso_local i32 @virtio_gpu_object_unreserve(%struct.virtio_gpu_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
